assets/css/style.css
/* ======================== google fonts ======================== */
@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600&family=Poppins:wght@500;600&display=swap');



body {
  max-width: 100%;
  overflow-x: hidden;
  margin: 0 auto;
  /* padding-bottom: 50px; */
}

/* ======================== header ======================== */
.grid {
  display: grid;
  grid-template-columns: repeat(24, 1fr);
  gap: 20px;
  padding: 5px 120px;
  grid-template-areas: ". content content content content content content content content content content content content content content content content content content content content content content content content content content .";
}

.content {
  grid-area: content;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  align-self: stretch;
  background: #FFFFFF;
}

.header-left {
  display: flex;
  width: 100%;
  padding: 16px 50px;
  justify-content: space-between;
  align-items: flex-start;
}

.header-logo {
  width: 121px;
  height: 40px;
  flex-shrink: 0;
}

.header-right {
  display: flex;
  gap: 16px;
  position: relative;
  align-items: flex-end;
}

.header-social {
  position: relative;
  width: 32px;
  height: 32px;
  background-color: #ffffff;
  border-radius: 4px;
  flex-shrink: 0;
  object-fit: cover;
  object-position: center;
}

.header-button {
  border: none;
  background-color: #ffffff;
  width: 32px;
  height: 32px;
  margin-right: 4px;
}




/* ======================== hero section ======================== */
.grid-hero {
  grid-template-areas: ". hero-left hero-left hero-left hero-left hero-left hero-left hero-left hero-left hero-left hero-left hero-left hero-left hero-right hero-right hero-right hero-right hero-right hero-right hero-right hero-right hero-right hero-right hero-right hero-right .";
  background: var(--neutral-50, #F4F5F5);
  width: 100%;
  flex-shrink: 0;
  height: auto;
  align-items: center;
  padding: 75px 156px;
}

.hero-left {
  grid-area: hero-left;
  width: 100%;
  height: auto;
  display: flex;
  justify-content: space-between;
  flex-direction: column;
  align-items: flex-start;
  gap: 10px;
  position: stretch;
}

.hero-right {
  grid-area: hero-right;
  display: inline-flex;
  gap: 16px;
  position: stretch;
}

.hero-image {
  width: 100%;
  height: auto;
}

.results {
  color: var(--primary-900, #071119);
  align-self: stretch;
  /* Heading/H1/Medium */
  font-family: Poppins;
  font-size: 48px;
  font-style: normal;
  font-weight: 500;
  line-height: 50px;
  /* 116.667% */
  letter-spacing: -1.92px;
}

.hero-paragraph {
  align-self: stretch;
  margin-top: -20px;
  margin-bottom: 40px;
  color: var(--neutral-800, #343D46);
  /* Paragraph/P1/Regular */
  font-family: Manrope;
  font-size: 18px;
  font-style: normal;
  font-weight: 400;
  line-height: 24px;
  /* 155.556% */
}

.hero-button {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 4px;
  padding: 16px 18px;
  margin-left: -5px;
  position: relative;
  align-self: stretch;
  width: 221px;
  flex: 0 0 auto;
  background-color: var(--primary-500);
  border-radius: 8px;
  -webkit-border-radius: 8px;
  -moz-border-radius: 8px;
  -ms-border-radius: 8px;
  -o-border-radius: 8px;
}

.hero-button:hover {
  color: var(--neutral-50);
  background-color: #25537D;
}

.button-text {
  position: relative;
  width: fit-content;
  margin-top: -1px;
  color: #ffffff;
  text-align: center;
  white-space: nowrap;
  /* Action/Semibold */
  font-family: Manrope;
  font-size: 16px;
  font-style: normal;
  font-weight: 600;
  line-height: 20px;
  /* 125% */
  padding: 0px 28px;
}

.line-rounded-arrow {
  width: 12px;
  height: 12px;
}



/* ======================== stat section ======================== */
.grid-stat {
  grid-template-areas: ". stat-left stat-left stat-left stat-left stat-left stat-left stat-left stat-left stat-left stat-left stat-left stat-left stat-right stat-right stat-right stat-right stat-right stat-right stat-right stat-right stat-right stat-right stat-right stat-right .";
  background: var(--neutral-900, #111417);
  display: flex;
  width: 100%;
  height: auto;
  padding: 60px 190px;
  justify-content: space-between;
  align-items: flex-start;
  column-gap: 50px;
}

.stat-left {
  grid-area: stat-left;
  width: 100%;
  height: auto;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  position: stretch;
}

.stat-right {
  grid-area: stat-right;
  width: 100%;
  height: auto;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 20px;
  position: stretch;
  margin-top: 50px;
  margin-left: 30px;
}

.stat-col-1, .stat-col-2 {
  display: flex;
  gap: 20px;
}

.success-statement {
  color: var(--neutral-50, #F4F5F5);
  /* Heading/H2/Medium */
  font-family: Poppins;
  font-size: 34px;
  font-style: normal;
  font-weight: 500;
  line-height: 44px;
  /* 122.222% */
  letter-spacing: -1.44px;
}

.founders-statement {
  align-self: stretch;
  color: var(--neutral-100, #E4E8EB);

  /* Paragraph/P2/Regular */
  font-family: Manrope;
  font-size: 16px;
  font-style: normal;
  font-weight: 400;
  line-height: 24px;
  /* 150% */
}

.stat-card {
  display: flex;
  width: 283px;
  padding: 14px 12px;
  padding-bottom: 26px;
  align-items: center;
  gap: 16px;
  border-radius: 4px;
  border: 1px solid var(--neutral-50, #F4F5F5);
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  -ms-border-radius: 4px;
  -o-border-radius: 4px;
}

.stat-header {
  color: var(--neutral-100, #E4E8EB);
  /* Heading/H3/Semi Bold */
  font-family: Poppins;
  font-size: 28px;
  font-style: normal;
  font-weight: 600;
  line-height: 30px;
  /* 107.143% */
  letter-spacing: -0.56px;
}

.stat-line {
  color: var(--neutral-100, #E4E8EB);
  position: absolute;
  /* Sub H/Medium */
  font-family: Poppins;
  font-size: 18px;
  font-style: normal;
  font-weight: 500;
  line-height: 22px;
  /* 122.222% */
}
/* ... */

